# python-kafka-microservices-template

./: .dockerignore  DTOs.py  Dockerfile-analytic  Dockerfile-notification  Dockerfile-order  Dockerfile-payment  Makefile  README.md  analytic_service.py  docker-compose.yaml  loggers.py  notification_service.py  order_service.py  payment_service.py  pyproject.toml  requirements.txt  settings.py
dev_scripts/: create_test-orders.sh  create_test_orders.py
